# human_cognition

./: CMakeLists.txt  Makefile  package.xml
devel/lib/human_cognition/: human_real_size.urdf  receiverorig
graveyard/: guiRQT.launch  human_joints.urdf  nodeSync.cpp  nodeTxtPlay.cpp  nodeTxtRecord.cpp  sync.launch  time.h  txtPlay.launch  txtRecord.launch
graveyard/script/: mocap-emulate.py  mocap-recv.py
html/: classQNode.html  classQNodeReceiver.html  classUi__WindowReceiverDesign.html
launch/: play.launch  record.launch  rviz.launch
meshes/: base_body.dae  base_head.dae  body.dae  foot_left.dae  foot_right.dae  hand_left.dae  hand_right.dae  head.dae  left-right_lower_arm.dae  left-right_lower_leg.dae  left_foot.dae  left_hand.dae  lower_arm.dae  lower_leg.dae  right_foot.dae  right_hand.dae  upper_arm.dae  upper_leg.dae  upper_leg_left.dae
model/: human.urdf  human_original.urdf  human_realSize.urdf  human_real_size.urdf
model/meshes/: body.dae  body_2.dae  foot_left.dae  foot_right.dae  hand_left.dae  hand_right.dae  head.dae  head_red.dae  lower_arm.dae  lower_leg.dae  upper_arm.dae  upper_leg.dae  upper_leg_left.dae  upper_leg_right.dae
node_common/: CMakeLists.txt  dialog.hpp  dialog_about.cpp  dialog_about.hpp  dialog_frames.cpp  dialog_frames.hpp  dialog_help.cpp  dialog_help.hpp  qnode.cpp  qnode.hpp  window_listener.cpp  window_listener.hpp  window_receiver.cpp  window_receiver.hpp
node_listener/: CMakeLists.txt  main.cpp  qnode_listener.cpp  qnode_listener.hpp
node_receiver/: CMakeLists.txt  cmotionHelper.cpp  cmotionHelper.h  main.cpp  qnode_receiver.cpp  qnode_receiver.hpp
resources/: images.qrc  images.qrc.depends
ui/: dialog_about.ui  dialog_frames.ui  dialog_help.ui  rviz_config.rviz  window_listener.ui  window_receiver.ui
