set(QT_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../resources/images.qrc)
set(QT_RECEIVER ${CMAKE_CURRENT_SOURCE_DIR}/../ui/window_receiver.ui)
set(QT_LISTENER ${CMAKE_CURRENT_SOURCE_DIR}/../ui/window_listener.ui)
set(QT_DIALOG_ABOUT ${CMAKE_CURRENT_SOURCE_DIR}/../ui/dialog_about.ui)
set(QT_DIALOG_FRAMES ${CMAKE_CURRENT_SOURCE_DIR}/../ui/dialog_frames.ui)

file(GLOB_RECURSE QT_MOC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS *.hpp)

QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
QT4_WRAP_UI(QT_FORMS_HPP ${QT_RECEIVER} ${QT_LISTENER} ${QT_DIALOG_ABOUT} ${QT_DIALOG_FRAMES})
QT4_WRAP_CPP(QT_MOC_HPP ${QT_MOC})

file(GLOB_RECURSE QT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS *.cpp)

add_library(human_cognition ${QT_SOURCES} ${QT_RESOURCES_CPP} ${QT_FORMS_HPP} ${QT_MOC_HPP})
target_link_libraries(human_cognition ${QT_LIBRARIES})
target_link_libraries(human_cognition ${catkin_LIBRARIES})
install(TARGETS human_cognition 
  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
